--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev:api": "node api-server.js",
     "dev:all": "concurrently \"npm run dev\" \"npm run dev:api\"",
     "build:wasm": "cd lark_voice_wasm && wasm-pack build --target web --release && mkdir -p ../src/wasm && cp pkg/* ../src/wasm/",
-    "build": "npm run build:wasm && vite build",
+    "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
