--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "livekit-client": "^2.9.7",
     "livekit-server-sdk": "^2.10.2",
     "lucide-react": "^0.462.0",
+    "mapbox-gl": "^3.11.0",
     "mongoose": "^8.13.1",
     "next-themes": "^0.3.0",
     "openai": "^4.86.2",
@@ -84,6 +85,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-quill": "^2.0.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
@@ -106,6 +108,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
     "@types/lodash.debounce": "^4.0.9",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
