--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,31 @@
-# Lark Environment Variables
+# LiveKit Credentials
+VITE_LIVEKIT_URL=wss://your-livekit-url
+VITE_LIVEKIT_API_KEY=your-livekit-api-key
+VITE_LIVEKIT_API_SECRET=your-livekit-api-secret
 
+# OpenAI Credentials
 VITE_OPENAI_API_KEY=your-openai-api-key
-VITE_ANTHROPIC_API_KEY=your-anthropic-api-key
+
+# Groq Credentials
 VITE_GROQ_API_KEY=your-groq-api-key
-VITE_GEMINI_API_KEY=your-gemini-api-key
-VITE_COHERE_API_KEY=your-cohere-api-key
+
+# Hugging Face Credentials
+VITE_HUGGINGFACE_API_KEY=your-huggingface-api-key
+
+# Auth0 Credentials
+VITE_AUTH0_DOMAIN=your-auth0-domain
+VITE_AUTH0_CLIENT_ID=your-auth0-client-id
+VITE_AUTH0_AUDIENCE=your-auth0-audience
+
+# Stripe Credentials (frontend only)
+VITE_STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
+
+# API Endpoints
+VITE_API_URL=http://localhost:3000/api
+VITE_API_BASE_URL=http://localhost:3000
+
+# OpenRouter API Key
 VITE_OPENROUTER_API_KEY=your-openrouter-api-key
+
+# Pinecone API Key
 VITE_PINECONE_API_KEY=your-pinecone-api-key
-VITE_STRIPE_PUBLIC_KEY=your-stripe-public-key
-VITE_STRIPE_SECRET_KEY=your-stripe-secret-key
-VITE_LIVEKIT_URL=your-livekit-url
-VITE_API_BASE_URL=your-api-base-url
